completed navbar css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/normalize.css">
     <!--custom styles-->
     <link rel="stylesheet" href="css/style.css">
+    <!--google font-->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -32,7 +34,7 @@
                 </div>
                 <!--right buttons-->
                 <div class="nav-buttons">
-                    <button class="sell-btn">Sell an item</button>
+                    <button class="sell-button">Sell an item</button>
                     <a href="#" class="auth-button">Sign in</a>
                     <a href="#" class="auth-button">Sign up</a>
                     <a href="#" class="cart-icon">
@@ -42,74 +44,75 @@
                 </div>
             </div>
             <!--collapsible menu-->
-            <ul class="nav-links">
-                <li><a href="#" class="link">All</a></li>
-                <li class="dropdown">
-                    <a href="#" class="link">Sofas
-                    <img src="images/icons/dropdown-icon.png" alt="dropdown button">
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Fabric Sofas</a></li>
-                        <li><a href="#">Leather Sofas</a></li>
-                        <li><a href="#">Metal Sofas</a></li>
-                        <li><a href="#">Fabric Sofas</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="link">Tables
-                    <img src="images/icons/dropdown-icon.png" alt="dropdown button">
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Dining Tables</a></li>
-                        <li><a href="#">Side Tables</a></li>
-                        <li><a href="#">Coffee Tables</a></li>
-                        <li><a href="#">Study Tables</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="link">Chairs
-                    <img src="images/icons/dropdown-icon.png" alt="dropdown button">
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Dining Chairs</a></li>
-                        <li><a href="#">Stools</a></li>
-                        <li><a href="#">Benches</a></li>
-                        <li><a href="#">Office Chairs</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="link">Beds
-                    <img src="images/icons/dropdown-icon.png" alt="dropdown button">
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Bed Frames</a></li>
-                        <li><a href="#">Mattresses</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="link">Decors
-                    <img src="images/icons/dropdown-icon.png" alt="dropdown button">
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Accessories</a></li>
-                        <li><a href="#">Lamps</a></li>
-                        <li><a href="#">Mirrors</a></li>
-                        <li><a href="#">Pillow Cushions</a></li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="link">Spaces
-                    <img src="images/icons/dropdown-icon.png" alt="dropdown button">
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Living Room</a></li>
-                        <li><a href="#">Dining Room</a></li>
-                        <li><a href="#">Bed Room</a></li>
-                        <li><a href="#">Study Room</a></li>
-                    </ul>
-                </li>
-                <li><a href="#" class="link">Second-hand</a></li>
-            </ul>
+            <div class="nav-categories">
+                <ul class="nav-links">
+                    <li><a href="#" class="link">All</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="link">Sofas
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Fabric Sofas</a></li>
+                            <li><a href="#">Leather Sofas</a></li>
+                            <li><a href="#">Metal Sofas</a></li>
+                            <li><a href="#">Fabric Sofas</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="link">Tables
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Dining Tables</a></li>
+                            <li><a href="#">Side Tables</a></li>
+                            <li><a href="#">Coffee Tables</a></li>
+                            <li><a href="#">Study Tables</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="link">Chairs
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Dining Chairs</a></li>
+                            <li><a href="#">Stools</a></li>
+                            <li><a href="#">Benches</a></li>
+                            <li><a href="#">Office Chairs</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="link">Beds
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Bed Frames</a></li>
+                            <li><a href="#">Mattresses</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="link">Decors
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Accessories</a></li>
+                            <li><a href="#">Lamps</a></li>
+                            <li><a href="#">Mirrors</a></li>
+                            <li><a href="#">Pillow Cushions</a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="link">Spaces
+                            <img src="images/icons/dropdown-icon.png" alt="dropdown button">
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#">Living Room</a></li>
+                            <li><a href="#">Dining Room</a></li>
+                            <li><a href="#">Bed Room</a></li>
+                            <li><a href="#">Study Room</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
     <!-- main content -->
@@ -118,7 +121,9 @@
         <footer class="footer">
             <!--footer left section-->
             <div class="footer-left">
-                <img src="images/others/mokesell-logo.png" alt="mokesell logo">
+                <div class="footer-logo">
+                    <img src="images/others/mokesell-logo.png" alt="mokesell logo">
+                </div>
                 <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
                 <!--social links-->
                 <div class="social-icons">
@@ -159,6 +164,6 @@
             </div>
         </footer>
     </main>
-    <script src="js/script.js"></script>
+    <!--<script src="js/script.js"></script>-->
 </body>
 </html>
