--- a/index.html
+++ b/index.html
@@ -117,12 +117,13 @@
     </header>
     <!-- main content -->
     <main class="main-content">
+
         <!--footer section-->
         <footer class="footer">
             <!--footer left section-->
             <div class="footer-left">
                 <div class="footer-logo">
-                    <img src="images/others/mokesell-logo.png" alt="mokesell logo">
+                    <img src="images/others/mokesell-logo-footer.png" alt="mokesell logo">
                 </div>
                 <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
                 <!--social links-->
@@ -139,27 +140,33 @@
             <!--footer right section-->
             <div class="footer-right">
                 <!--shop section-->
-                <div class="footer-section">
+                <div class="footer-content">
                     <h4>Shop</h4>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html">Shop All</a></li>
-                    <li><a href="#">New Arrivals</a></li>
-                    <li><a href="#">Second-Hand Furniture</a></li>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Shop All</a></li>
+                        <li><a href="#">New Arrivals</a></li>
+                        <li><a href="#">Second-Hand Furniture</a></li>
+                    </ul>
                 </div>
                 <!--discover section-->
-                <div class="footer-section">
+                <div class="footer-content">
                     <h4>Discover</h4>
-                    <li><a href="#">Games and Rewards</a></li>
-                    <li><a href="#">How it Works</a></li>
-                    <li><a href="#">Showrooms</a></li>
+                    <ul>
+                        <li><a href="#">Games and Rewards</a></li>
+                        <li><a href="#">How it Works</a></li>
+                        <li><a href="#">Showrooms</a></li>
+                    </ul>
                 </div>
                 <!--support section-->
-                <div class="footer-section">
+                <div class="footer-content">
                     <h4>Support</h4>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><a href="#">Terms and Conditions</a></li>
-                    <li><a href="#">Return and Exchange</a></li>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Terms and Conditions</a></li>
+                        <li><a href="#">Return and Exchange</a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
