completed home page html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                 </div>
                 <!--right buttons-->
                 <div class="nav-buttons">
-                    <button class="sell-button">Sell an item</button>
+                    <a href="#">
+                        <button class="sell-button">Sell an item</button>
+                    </a>
                     <a href="#" class="auth-button">Sign in</a>
                     <a href="#" class="auth-button">Sign up</a>
                     <a href="#" class="cart-icon">
@@ -117,7 +119,74 @@
     </header>
     <!-- main content -->
     <main class="main-content">
-
+        <!--hero section-->
+        <section class="hero">
+            <button class="prev-button">❮</button>
+            <div class="hero-text">
+                <h1>DISCOVER YOUR DREAM ROOM</h1>
+                <p>Your journey to a beautiful home begins here.</p>
+                <a href="#">
+                    <button>SEE OUR SPACES</button>
+                <a>
+            </div>
+            <button class="next-button">❯</button>
+        </section>
+        <!--top categories section-->
+        <section class="top-categories">
+            <h2>TOP CATEGORIES</h2>
+            <div class="category-grid">
+                <div class="category"><img src="#" alt="Sofas"></div>
+                <div class="category"><img src="#" alt="Tables"></div>
+                <div class="category"><img src="#" alt="Beds"></div>
+                <div class="category"><img src="#" alt="Decors"></div>
+            </div>
+        </section>
+        <!--limited time offers section-->
+        <section class="limited-offers">
+            <h2>LIMITED TIME OFFERS</h2>
+            <div class="countdown">
+                <p>Shop Now Before It's Gone!</p>
+                <div id="timer">03 : 18 : 20 : 34</div>
+            </div>
+        </section>
+        <!--listing ad section-->
+        <section class="listing-advertisement">
+            <div class="advertisement">
+                <h3>Give your furniture a new home.</h3>
+                <p>Sell your pre-loved items easily.</p>
+                <a href="#">
+                    <button>LIST YOUR ITEM</button>
+                </a>
+            </div>
+            <div class="advertisement">
+                <h3>Find treasures for less.</h3>
+                <p>Quality second-hand furniture at great prices.</p>
+                <a href="#">
+                    <button>BROWSE LISTINGS</button>
+                </a>
+            </div>
+        </section>
+        <!--how it works section-->
+        <section class="how-it-works">
+            <h2>YOUR LISTINGS, MADE EASY</h2>
+            <div class="steps">
+                <div class="step">
+                    <img src="#" alt="camera icon">
+                    <p>Snap a Picture</p>
+                    <p>Take clear and attractive photos of your item to grab buyers' attention.</p>
+                </div>
+                <div class="step">
+                    <img src="#" alt="pencil icon">
+                    <p>List your Product</p>
+                    <p>Fill in details like title, description, category, and price—your listing will go live in seconds!</p>
+                </div>                
+                <div class="step">
+                    <img src="#" alt="chat icon">
+                    <p>Chat and Sell</p>
+                    <p>Respond to buyer inquiries, finalize the deal, and make the sale effortlessly.</p>
+                </div>
+            </div>
+        </section>
         <!--footer section-->
         <footer class="footer">
             <!--footer left section-->
