continued css for hero section

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header class="header">
-        <!--top promo bar-->
+        <!--top promo bar section-->
         <div class="promo-bar">
             10% OFF - On all purchases above $5000.
         </div>
-        <!--navbar-->
+        <!--navbar section-->
         <nav class="navbar">
             <div class="nav-container">
                 <!--menu button-->
@@ -126,7 +126,7 @@
                 <h1>DISCOVER YOUR DREAM ROOM</h1>
                 <p>Your journey to a beautiful home begins here.</p>
                 <a href="#">
-                    <button>SEE OUR SPACES</button>
+                    <button class="cta-button">SEE OUR SPACES</button>
                 <a>
             </div>
             <button class="next-button">❯</button>
