--- a/index.html
+++ b/index.html
@@ -241,8 +241,9 @@
         </footer>
     </main>
     <!--registration popup section-->
+    <div id="popupOverlay" class="popup-overlay">s</div>
     <div id="registrationPopup" class="popup">
-        <div class="popup-content">
+        <div class="popup-container">
             <div class="popup-logo">
                 <img src="images/others/mokesell-logo-popup.png">
             </div>
@@ -251,24 +252,37 @@
                 <button id="signupTab" class="active">Sign up</button>
                 <button id="signinTab">Sign in</button>
             </div>
-            <!--sign up form section-->
-            <div id="signupForm" class="form active">
-                <input type="text" id="signupUsername" placeholder="Username">
-                <input type="email" id="signupEmail" placeholder="Email Address">
-                <input type="password" id="signupPassword" placeholder="Password">
-                <button id="signupButton">SIGN UP</button>
-            </div>
-            <!--sign in form section-->
-            <div id="signinForm" class="form">
-                <input type="text" id="signinUsername" placeholder="Username">
-                <input type="password" id="signinPassword" placeholder="Password">
-                <button id="signinButton">SIGN IN</button>
-            </div>
-            <!--social login section-->
-            <div class="social-login">
-                <p>OR</p>
-                <button>Continue with Google</button>
-                <button>Continue with Facebook</button>
+            <div class="popup-content">
+                <div class="popup-fields">
+                    <!--sign up form-->
+                    <div id="signupForm" class="form active">
+                        <label for="signupUsername">Username</label>
+                        <input type="text" id="signupUsername" placeholder="Username">
+                        <label for="signupEmail">Email Address</label>
+                        <input type="email" id="signupEmail" placeholder="Email Address">
+                        <label for="signupPassword">Password</label>
+                        <input type="password" id="signupPassword" placeholder="Password">
+                        <button id="signupButton">SIGN UP</button>
+                    </div>
+                    <!--sign in form-->
+                    <div id="signinForm" class="form">
+                        <label for="signinUsername">Username</label>
+                        <input type="text" id="signinUsername" placeholder="Username">
+                        <label for="signinPassword">Password</label>
+                        <input type="password" id="signinPassword" placeholder="Password">
+                        <button id="signinButton">SIGN IN</button>
+                    </div>
+                    <!--social login-->
+                    <div class="social-login">
+                        <p>OR</p>
+                        <button>Continue with Google</button>
+                        <button>Continue with Facebook</button>
+                    </div>
+                </div>
+                <!--discount code image-->
+                <div class="discount-code">
+                    <img src="images/others/popup-discount-code.png" alt="discount code image">
+                </div>
             </div>
         </div>
     </div>
