completed top categories section css

--- a/index.html
+++ b/index.html
@@ -155,10 +155,51 @@
         <section class="top-categories">
             <h2>TOP CATEGORIES</h2>
             <div class="category-grid">
-                <div class="category"><img src="#" alt="Sofas"></div>
-                <div class="category"><img src="#" alt="Tables"></div>
-                <div class="category"><img src="#" alt="Beds"></div>
-                <div class="category"><img src="#" alt="Decors"></div>
+                <div class="category">
+                    <a href="#">
+                        <img src="images/categories/sofa-category.png" alt="Sofas">
+                        <div class="category-name">
+                            Sofas
+                            <img src="images/icons/right-arrow-icon.png" alt="right-arrow">
+                        </div>
+                    </a>
+                </div>
+                <div class="category">
+                    <a href="#">
+                        <img src="images/categories/table-category.png" alt="Tables">
+                        <div class="category-name">
+                            Tables
+                            <img src="images/icons/right-arrow-icon.png" alt="right-arrow">
+                        </div>
+                    </a>
+                </div>
+                <div class="category">
+                    <a href="#">
+                        <img src="images/categories/chair-category.png" alt="Chairs">
+                        <div class="category-name">
+                            Chairs
+                            <img src="images/icons/right-arrow-icon.png" alt="right-arrow">
+                        </div>
+                    </a>
+                </div>
+                <div class="category">
+                    <a href="#">
+                        <img src="images/categories/bed-category.png" alt="Beds">
+                        <div class="category-name">
+                            Beds
+                            <img src="images/icons/right-arrow-icon.png" alt="right-arrow">
+                        </div>
+                    </a>
+                </div>
+                <div class="category">
+                    <a href="#">
+                        <img src="images/categories/decor-category.png" alt="Decors">
+                        <div class="category-name">
+                            Decors
+                            <img src="images/icons/right-arrow-icon.png" alt="right-arrow">
+                        </div>
+                    </a>
+                </div>
             </div>
         </section>
         <!--limited time offers section-->
