completed limited time offers section css and javascript

--- a/index.html
+++ b/index.html
@@ -204,10 +204,29 @@
         </section>
         <!--limited time offers section-->
         <section class="limited-offers">
-            <h2>LIMITED TIME OFFERS</h2>
-            <div class="countdown">
-                <p>Shop Now Before It's Gone!</p>
-                <div id="timer">03 : 18 : 20 : 34</div>
+            <div class="limited-offers-overlay">
+                <div class="limited-offers-header">
+                    <h2>LIMITED TIME OFFERS</h2>
+                    <p>Shop Now Before It's Gone!</p>
+                </div>
+                <div class="countdown">
+                    <div class="time-box">
+                        <span id="days">00</span>
+                        <p>DAYS</p>
+                    </div>
+                    <div class="time-box">
+                        <span id="hours">00</span>
+                        <p>HOURS</p>
+                    </div>
+                    <div class="time-box">
+                        <span id="minutes">00</span>
+                        <p>MINUTES</p>
+                    </div>
+                    <div class="time-box">
+                        <span id="seconds">00</span>
+                        <p>SECONDS</p>
+                    </div>
+                </div>
             </div>
         </section>
         <!--listing ad section-->
