completed list or browse listings section css

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <h1>DISCOVER YOUR DREAM ROOM</h1>
                 <p>Your journey to a beautiful home begins here.</p>
                 <a href="#">
-                    <button class="cta-button">SEE OUR SPACES</button>
+                    <button class="hero-button">SEE OUR SPACES</button>
                 <a>
             </div>
             <button class="next-button">❯</button>
@@ -229,16 +229,16 @@
                 </div>
             </div>
         </section>
-        <!--listing ad section-->
-        <section class="listing-advertisement">
-            <div class="advertisement">
+        <!--list or browse listings section-->
+        <section class="list-browse-listings">
+            <div class="list-listings">
                 <h3>Give your furniture a new home.</h3>
                 <p>Sell your pre-loved items easily.</p>
                 <a href="#">
                     <button>LIST YOUR ITEM</button>
                 </a>
             </div>
-            <div class="advertisement">
+            <div class="browse-listings">
                 <h3>Find treasures for less.</h3>
                 <p>Quality second-hand furniture at great prices.</p>
                 <a href="#">
@@ -366,6 +366,7 @@
             </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
     <script src="js/registration.js"></script>
 </body>
 </html>
