completed css for home page

--- a/index.html
+++ b/index.html
@@ -249,20 +249,21 @@
         <!--how it works section-->
         <section class="how-it-works">
             <h2>YOUR LISTINGS, MADE EASY</h2>
+            <p>Follow these simple steps to list your product and start selling.</p>
             <div class="steps">
                 <div class="step">
-                    <img src="#" alt="camera icon">
-                    <p>Snap a Picture</p>
+                    <img src="images/icons/camera-icon.png" alt="camera icon">
+                    <h4>1. Snap a Picture</h4>
                     <p>Take clear and attractive photos of your item to grab buyers' attention.</p>
                 </div>
                 <div class="step">
-                    <img src="#" alt="pencil icon">
-                    <p>List your Product</p>
+                    <img src="images/icons/pencil-icon.png" alt="pencil icon">
+                    <h4>2. List your Product</h4>
                     <p>Fill in details like title, description, category, and price—your listing will go live in seconds!</p>
                 </div>                
                 <div class="step">
-                    <img src="#" alt="chat icon">
-                    <p>Chat and Sell</p>
+                    <img src="images/icons/chat-icon.png" alt="chat icon">
+                    <h4>3. Chat and Sell</h4>
                     <p>Respond to buyer inquiries, finalize the deal, and make the sale effortlessly.</p>
                 </div>
             </div>
