linked nav bar sign in and sign up to activate popup

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         <button class="sell-button">Sell an item</button>
                     </a>
                     <div id="guestNav">
-                        <a href="#" class="auth-button">Sign in</a>
-                        <a href="#" class="auth-button">Sign up</a>
+                        <button class="auth-button" id="navSignIn">Sign in</button>
+                        <button class="auth-button" id="navSignUp">Sign up</button>
                         <a href="#" class="nav-icon">
                             <img src="images/icons/cart-icon.png" alt="cart icon">
                             <span class="cart-badge">0</span>
