fixed checkout, contact, order-confirmation and showroom html, started cart-sidebar html, css and javascript, uploaded product and showroom images

--- a/checkout.html
+++ b/checkout.html
@@ -331,11 +331,60 @@
                 <!--repeat-->
             </div>
         </section>
+        
+        <!--footer section-->
+        <footer class="footer">
+            <!--footer left section-->
+            <div class="footer-left">
+                <div class="footer-logo">
+                    <img src="images/others/mokesell-logo-footer.png" alt="mokesell logo">
+                </div>
+                <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
+                <!--social links-->
+                <div class="social-icons">
+                    <a href="#" target="_blank" class="icon"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
+                    <a href="#" target="_blank" class="icon"><img src="images/icons/twitter-icon.png" alt="Twitter"></a>
+                    <a href="#" target="_blank" class="icon"><img src="images/icons/facebook-icon.png" alt="Facebook"></a>
+                </div>
+                <!--copyright-->
+                <div class="copyright">
+                    <p>© 2025 MokeSell. All Rights Reserved.</p>
+                </div>
+            </div> 
+            <!--footer right section-->
+            <div class="footer-right">
+                <!--shop section-->
+                <div class="footer-content">
+                    <h4>Shop</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Shop All</a></li>
+                        <li><a href="#">New Arrivals</a></li>
+                        <li><a href="#">Second-Hand Furniture</a></li>
+                    </ul>
+                </div>
+                <!--discover section-->
+                <div class="footer-content">
+                    <h4>Discover</h4>
+                    <ul>
+                        <li><a href="#">Games and Rewards</a></li>
+                        <li><a href="#">How it Works</a></li>
+                        <li><a href="#">Showrooms</a></li>
+                    </ul>
+                </div>
+                <!--support section-->
+                <div class="footer-content">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Terms and Conditions</a></li>
+                        <li><a href="#">Return and Exchange</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </main>
-
-    <footer class="footer">
-    
-    </footer>
 
     <script src="js/checkout.js"></script>
 </body>
