--- a/showroom.html
+++ b/showroom.html
@@ -122,7 +122,7 @@
             <h1>Home office</h1>
             <p>A place of clarity and encouraging focus.</p>
             <div class="hero-image">
-                <img src="images/office-main.jpg" alt="Home office setup">
+                <img src="images/showroom/office-main.jpg" alt="Home office setup">
                 <!--interactive hotspots-->
                 <div class="hotspot" style="top: 45%; left: 25%;" data-product="Office Chair">
                     <span class="hotspot-dot"></span>
@@ -134,7 +134,26 @@
                         </div>
                     </div>
                 </div>
-                <!--more hotspots-->
+                <div class="hotspot" style="top: 35%; left: 55%;" data-product="Desk Lamp">
+                    <span class="hotspot-dot"></span>
+                    <div class="hotspot-content">
+                        <img src="images/products/lamp-1.jpg" alt="Desk Lamp">
+                        <div class="product-info">
+                            <h3>Desk Lamp</h3>
+                            <p>$129</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hotspot" style="top: 65%; left: 75%;" data-product="Storage Unit">
+                    <span class="hotspot-dot"></span>
+                    <div class="hotspot-content">
+                        <img src="images/products/storage-1.jpg" alt="Storage Unit">
+                        <div class="product-info">
+                            <h3>Storage Unit</h3>
+                            <p>$199</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -143,27 +162,27 @@
             <h2>FEATURED WORKSPACES AT HOME</h2>
             <div class="workspace-grid">
                 <div class="workspace-card">
-                    <img src="images/workspace-1.jpg" alt="Workspace 1">
+                    <img src="images/showroom/workspace-1.jpg" alt="Workspace 1">
                     <div class="card-overlay">
-                        <button class="shop-button">Shop now</button>
+                        <button class="shop-button">One dorm room, two expressions</button>
                     </div>
                 </div>
                 <div class="workspace-card">
-                    <img src="images/workspace-2.jpg" alt="Workspace 2">
+                    <img src="images/showroom/workspace-2.jpg" alt="Workspace 2">
                     <div class="card-overlay">
-                        <button class="shop-button">Shop now</button>
+                        <button class="shop-button">Room for both focus and free time</button>
                     </div>
                 </div>
                 <div class="workspace-card">
-                    <img src="images/workspace-3.jpg" alt="Workspace 3">
+                    <img src="images/showroom/workspace-3.jpg" alt="Workspace 3">
                     <div class="card-overlay">
-                        <button class="shop-button">Shop now</button>
+                        <button class="shop-button">Creative, colourful, organised</button>
                     </div>
                 </div>
                 <div class="workspace-card">
-                    <img src="images/workspace-4.jpg" alt="Workspace 4">
+                    <img src="images/showroom/workspace-4.jpg" alt="Workspace 4">
                     <div class="card-overlay">
-                        <button class="shop-button">Shop now</button>
+                        <button class="shop-button">Studies in tune with the times</button>
                     </div>
                 </div>
             </div>
@@ -174,16 +193,35 @@
             <h2>GET THE LOOK</h2>
             <div class="look-grid">
                 <div class="look-card">
-                    <img src="images/look-1.jpg" alt="Office look 1">
+                    <img src="images/showroom/look-1.jpg" alt="Minimalist office setup">
                     <div class="product-tag">
                         <span class="tag-dot"></span>
                         <div class="tag-content">
-                            <h4>Product Name</h4>
-                            <p>$XXX</p>
+                            <h4>Modern Desk Chair</h4>
+                            <p>$249</p>
                         </div>
                     </div>
                 </div>
-                <!--repeat-->
+                <div class="look-card">
+                    <img src="images/showroom/look-2.jpg" alt="Creative workspace">
+                    <div class="product-tag">
+                        <span class="tag-dot"></span>
+                        <div class="tag-content">
+                            <h4>Ergonomic Desk</h4>
+                            <p>$399</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="look-card">
+                    <img src="images/showroom/look-3.jpg" alt="Storage solutions">
+                    <div class="product-tag">
+                        <span class="tag-dot"></span>
+                        <div class="tag-content">
+                            <h4>Wall Storage Unit</h4>
+                            <p>$179</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -192,9 +230,17 @@
             <h2>CLICK TO SEE OUR PRODUCTS IN REAL HOMES | @MOKESELL3</h2>
             <div class="homes-grid">
                 <div class="home-image">
-                    <img src="images/real-home-1.jpg" alt="Real home 1">
+                    <img src="images/showroom/real-home-1.jpg" alt="Real home office 1">
                 </div>
-                <!--repeat-->
+                <div class="home-image">
+                    <img src="images/showroom/real-home-2.jpg" alt="Real home office 2">
+                </div>
+                <div class="home-image">
+                    <img src="images/showroom/real-home-3.jpg" alt="Real home office 3">
+                </div>
+                <div class="home-image">
+                    <img src="images/showroom/real-home-4.jpg" alt="Real home office 4">
+                </div>
             </div>
         </section>
 
@@ -203,14 +249,29 @@
             <h2>SERIES FOR GAMING, STUDYING AND WORKING</h2>
             <div class="series-grid">
                 <div class="series-card">
-                    <img src="images/series-1.jpg" alt="Series 1">
+                    <img src="images/products/series-1.jpg" alt="Gaming series">
                     <div class="series-info">
-                        <h3>Series Name</h3>
-                        <p>Description text</p>
+                        <h3>Gaming Series</h3>
+                        <p>Professional gaming setup with ergonomic design</p>
                         <button class="series-btn">Shop now</button>
                     </div>
                 </div>
-                <!--repeat-->
+                <div class="series-card">
+                    <img src="images/products/series-2.jpg" alt="Study series">
+                    <div class="series-info">
+                        <h3>Study Series</h3>
+                        <p>Focused workspace for maximum productivity</p>
+                        <button class="series-btn">Shop now</button>
+                    </div>
+                </div>
+                <div class="series-card">
+                    <img src="images/products/series-3.jpg" alt="Work series">
+                    <div class="series-info">
+                        <h3>Work Series</h3>
+                        <p>Professional home office solutions</p>
+                        <button class="series-btn">Shop now</button>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -219,13 +280,33 @@
             <h2>WORK LAMPS: YOUR PERFECT WORKMATE</h2>
             <div class="lamps-grid">
                 <div class="lamp-card">
-                    <img src="images/lamp-1.jpg" alt="Work lamp 1">
+                    <img src="images/products/lamp-1.jpg" alt="Modern desk lamp">
                     <div class="lamp-info">
-                        <h3>Lamp Name</h3>
-                        <p>$XX</p>
+                        <h3>Modern LED Desk Lamp</h3>
+                        <p>$89</p>
                     </div>
                 </div>
-                <!--repeat-->
+                <div class="lamp-card">
+                    <img src="images/products/lamp-2.jpg" alt="Classic desk lamp">
+                    <div class="lamp-info">
+                        <h3>Classic Desk Lamp</h3>
+                        <p>$69</p>
+                    </div>
+                </div>
+                <div class="lamp-card">
+                    <img src="images/products/lamp-3.jpg" alt="Adjustable lamp">
+                    <div class="lamp-info">
+                        <h3>Adjustable Work Lamp</h3>
+                        <p>$99</p>
+                    </div>
+                </div>
+                <div class="lamp-card">
+                    <img src="images/products/lamp-4.jpg" alt="Smart lamp">
+                    <div class="lamp-info">
+                        <h3>Smart LED Lamp</h3>
+                        <p>$129</p>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -234,11 +315,20 @@
             <h2>HOW TO GET A BETTER WORKSPACE AT HOME</h2>
             <div class="guide-grid">
                 <div class="guide-card">
-                    <img src="images/guide-1.jpg" alt="Guide 1">
-                    <h3>Title</h3>
-                    <p>Description</p>
+                    <img src="images/showroom/guide-1.jpg" alt="Ergonomic setup">
+                    <h3>Ergonomic Setup</h3>
+                    <p>Create a comfortable and healthy workspace</p>
                 </div>
-                <!--repeat-->
+                <div class="guide-card">
+                    <img src="images/showroom/guide-2.jpg" alt="Lighting tips">
+                    <h3>Perfect Lighting</h3>
+                    <p>Optimize your workspace lighting</p>
+                </div>
+                <div class="guide-card">
+                    <img src="images/showroom/guide-3.jpg" alt="Organization tips">
+                    <h3>Smart Organization</h3>
+                    <p>Keep your workspace tidy and efficient</p>
+                </div>
             </div>
         </section>
 
@@ -246,28 +336,76 @@
         <section class="benefits">
             <div class="benefits-grid">
                 <div class="benefit-item">
-                    <img src="images/icons/benefit-1.svg" alt="Delivery">
-                    <h3>Delivery in 1-3 days</h3>
-                    <p>Express delivery all around the island.</p>
+                    <img src="images/icons/delivery-icon.png" alt="Delivery">
+                    <h3>Delivery from $5 - $35</h3>
+                    <p>Get your order delivered in 3-5 days and enjoy FREE home delivery over $500</p>
                 </div>
                 <div class="benefit-item">
-                    <img src="images/icons/benefit-2.svg" alt="Installation">
-                    <h3>3-Year Installation Support</h3>
-                    <p>Free installation when you buy above 300$.</p>
+                    <img src="images/icons/assembly-icon.png" alt="Installation">
+                    <h3>Assembly</h3>
+                    <p>We help you piece it all together</p>
                 </div>
                 <div class="benefit-item">
-                    <img src="images/icons/benefit-3.svg" alt="Support">
-                    <h3>3-Year Warranty</h3>
-                    <p>Full warranty with good service support.</p>
+                    <img src="images/icons/card-icon.png" alt="Support">
+                    <h3>Flexible payment options</h3>
+                    <p>Pay with 0% interest instalment plans or with Atome</p>
                 </div>
             </div>
         </section>
+
+        <!--footer section-->
+        <footer class="footer">
+            <!--footer left section-->
+            <div class="footer-left">
+                <div class="footer-logo">
+                    <img src="images/others/mokesell-logo-footer.png" alt="mokesell logo">
+                </div>
+                <p>Where Style Meets Comfort - Redefining Your Furniture Journey.</p>
+                <!--social links-->
+                <div class="social-icons">
+                    <a href="#" target="_blank" class="icon"><img src="images/icons/instagram-icon.png" alt="Instagram"></a>
+                    <a href="#" target="_blank" class="icon"><img src="images/icons/twitter-icon.png" alt="Twitter"></a>
+                    <a href="#" target="_blank" class="icon"><img src="images/icons/facebook-icon.png" alt="Facebook"></a>
+                </div>
+                <!--copyright-->
+                <div class="copyright">
+                    <p>© 2025 MokeSell. All Rights Reserved.</p>
+                </div>
+            </div> 
+            <!--footer right section-->
+            <div class="footer-right">
+                <!--shop section-->
+                <div class="footer-content">
+                    <h4>Shop</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Shop All</a></li>
+                        <li><a href="#">New Arrivals</a></li>
+                        <li><a href="#">Second-Hand Furniture</a></li>
+                    </ul>
+                </div>
+                <!--discover section-->
+                <div class="footer-content">
+                    <h4>Discover</h4>
+                    <ul>
+                        <li><a href="#">Games and Rewards</a></li>
+                        <li><a href="#">How it Works</a></li>
+                        <li><a href="#">Showrooms</a></li>
+                    </ul>
+                </div>
+                <!--support section-->
+                <div class="footer-content">
+                    <h4>Support</h4>
+                    <ul>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Terms and Conditions</a></li>
+                        <li><a href="#">Return and Exchange</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </main>
-
-    <!--footer from index.html-->
-    <footer class="footer">
-
-    </footer>
 
     <script src="js/showroom.js"></script>
 </body>
